recommend-system/security/infrastructure/istio-security/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: recommend-prod
spec:
  mtls:
    mode: STRICT
